--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       Send USDT, BTC, DAI and more across TRC20, ERC20, BEP20, and Fantom with ease.
     </p>
     <div class="cta">
-      <a class="btn primary" href="https://t.me/FlashDevSamuel" target="_blank">Telegram Support</a>
-      <a class="btn secondary" href="https://wa.me/+15812424981" target="_blank">WhatsApp</a>
+      <a class="btn primary" href="https://t.me/Flashusdt_3" target="_blank">Telegram Support</a>
+      <a class="btn secondary" href="https://wa.me/+12498983137" target="_blank">WhatsApp</a>
     </div>
   </header>
 
@@ -140,8 +140,8 @@
   <footer class="container">
     <p>📲 Contact & Community:</p>
     <p>
-      <a href="https://t.me/FlashDevSamuel" target="_blank">Telegram</a> ·
-      <a href="https://wa.me/+15812424981" target="_blank">WhatsApp</a>
+      <a href="https://t.me/Flashusdt_3" target="_blank">Telegram</a> ·
+      <a href="https://wa.me/+12498983137" target="_blank">WhatsApp</a>
     </p>
     <p class="disclaimer"><strong>Disclaimer:</strong> This project is for educational and research purposes only. Use it at your own risk.</p>
   </footer>
